# api/src/database/postgres/entities/index.ts
@@ -1,4 +1,9 @@
+export * from "./membership.js";
+export * from "./organization.js";
 export * from "./user.js";
+import { Membership } from "./membership.js";
+import { Organization } from "./organization.js";
 import { User } from "./user.js";
 
-export const entities = [User];
+/** All entities; registered on the data source. */
+export const entities = [User, Organization, Membership];
